# ChangeLog for x11-libs/libXxf86vm
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-libs/libXxf86vm/ChangeLog,v 1.31 2006/10/01 17:04:09 dberkholz Exp $

  01 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  libXxf86vm-1.0.1.ebuild:
  libXext has a runtime dep on xextproto now, so we don't need to depend on it
  here.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> libXxf86vm-1.0.1.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> libXxf86vm-1.0.1.ebuild:
  Mark 1.0.1 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  libXxf86vm-1.0.1.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -files/fix_shadow_manpages.patch:
  Pull orphaned patch.

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -libXxf86vm-1.0.0-r1.ebuild:
  Pull old ebuild.

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  libXxf86vm-1.0.1.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> libXxf86vm-1.0.1.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  libXxf86vm-1.0.1.ebuild:
  x86 stable.

  29 Apr 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  libXxf86vm-1.0.1.ebuild:
  Don't need to run autoreconf.

*libXxf86vm-1.0.1 (29 Apr 2006)

  29 Apr 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXxf86vm-1.0.1.ebuild:
  Version bump.  Includes fix for shadow manpages.

  28 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-libXxf86vm-1.0.0-r1, Manifest:
  Revert to working digest.

  28 Apr 2006; Alec Warner <antarus@gentoo.org>
  files/digest-libXxf86vm-1.0.0-r1, Manifest:
  Fixing SHA256 digest, pass four

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  libXxf86vm-1.0.0-r1.ebuild:
  Add ~x86-fbsd keyword.

  24 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  libXxf86vm-1.0.0-r1.ebuild: