@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-libs/libXxf86vm/libXxf86vm-1.0.1.ebuild,v 1.10 2006/10/01 17:04:09 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXxf86vm/libXxf86vm-1.0.1.ebuild,v 1.11 2007/02/04 18:26:58 joshuabaergen Exp $
 
 EAPI="prefix"
 
@@ -12,7 +12,6 @@ inherit x-modular
 DESCRIPTION="X.Org Xxf86vm library"
 
 KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-macos"
-RESTRICT="mirror"
 
 RDEPEND="x11-libs/libX11
 	x11-libs/libXext"
